# embedml

./: .gitignore  LICENSE  README.md  check_test.py  setup.cfg
.github/workflows/: build.yml  python-package.yml
embedml/: nn.py  tensor.py  util.py
models/: gpt.py
notebooks/: gpt_example.ipynb  train_mnist.ipynb  train_mnist_embedml.ipynb
test/: test_check_ops.py  test_grad.py  test_grad_ops.py  test_sub.py
test/module/: test_embedding.py  test_layernorm.py  test_linear.py  test_logsoftmax.py  test_softmax.py
test/test_lossfunctions/: test_softmax.py
test/test_models/: test_gpt.py  test_simple.py
test/test_ops/: test_add.py  test_div.py  test_dropout.py  test_exp.py  test_gelu_tanh_sigmoid.py  test_iops.py  test_log.py  test_matmul.py  test_max.py  test_mean.py  test_mul.py  test_permute.py  test_pow.py  test_relu.py  test_reshape.py  test_slice.py  test_sub.py
test/test_train/: test_tarin_mlp.py
test/utils/: test_dataset.py
