[metadata]
name = embedml
version = 0.1.2
description = Minimal autograd engine using numpy with minimal implementation of pyTorch or Jax like library for traning NNs.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amirhm/embedml
author = amirhm
author_email = amirhm@gmail.com
license=MIT,
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.7.1

[options.packages.find]
exclude =
    test*
    notebooks*
    testing*

[flake8]
per-file-ignores =
    # imported but unused
    tensor.py: E704 , E501
ignore=
    E501